fix: fixed hidden breadcrumb problem on safari

--- a/src/sass/components/_breadcrumbs.scss
+++ b/src/sass/components/_breadcrumbs.scss
@@ -1,6 +1,5 @@
 .breadcrumbs {
     margin-top: 3rem;
-    margin-bottom: -1rem;
     margin-left: 5rem;
 
     font-size: 1.5rem;
