--- a/src/sass/components/_standard-content.scss
+++ b/src/sass/components/_standard-content.scss
@@ -1,6 +1,6 @@
 .standard-content {
   background-color: var(--color-whitish);
-  padding: 4rem 5rem;
+  padding: 3rem 5rem;
   &--withback {
     @extend .standard-content;
     padding-top: 0;
